--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,9 @@
     <script src="/static/three.js"></script>
   </head>
   <body style="width:100%;height:100%;margin:0;">
-    <canvas id="canvas-2d" width="600" height="1000" style="width:100%;height:100%;object-fit:contain;"></canvas>
+    <canvas id="canvas-2d" width="600" height="1000" style="width:60%;height:100%;object-fit:contain;"></canvas>
     <img id="player-image" src="/static/player.gif" style="display: none;">
     <script src="/static/game.js"></script>
+    <div id="scoreboard" style="float:left;">←→キーで角度を決めて，<br>シフトキーで打ち出す</div>
   </body>
 </html>
