--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,6 @@
     <canvas id="canvas-2d" width="600" height="1000" style="width:60%;height:100%;object-fit:contain;"></canvas>
     <img id="player-image" src="/static/player.gif" style="display: none;">
     <script src="/static/game.js"></script>
-    <div id="scoreboard" style="float:left;">←→キーで角度を決めて，<br>シフトキーで打ち出す</div>
+    <div id="scoreboard" style="float:left;">←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す</div>
   </body>
 </html>
