--- a/static/index.html
+++ b/static/index.html
@@ -4,12 +4,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <script src="/node_modules/socket.io/client-dist/socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/static/three.js"></script>
   </head>
   <body style="width:100%;height:100%;margin:0;">
     <canvas id="canvas-2d" width="600" height="1000" style="width:60%;height:100%;object-fit:contain;"></canvas>
-    <img id="player-image" src="/static/player.gif" style="display: none;">
-    <script src="/static/game.js"></script>
+    <img id="player-image" src="/dist/player.gif" style="display: none;">
+    <script src="/dist/main.js"></script>
     <div id="scoreboard" style="float:left;">←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す</div>
   </body>
 </html>
