マージ後の微調整(3Dをデフォルトに等)

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
       <canvas id="canvas-2d" width="600" height="1000" style="max-width:100%;max-height:95vh;"></canvas>
     </div>
     <img id="player-image" src="/dist/player.gif" style="display: none;">
-    <div id="scoreboard" style="float:left;">灰色の半円をスワイプして打ち出す</div>
+    <div id="scoreboard" style="float:left;">←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す</div>
     <script src="/dist/main.js"></script>
   </body>
 </html>
