--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,14 @@
   <head>
     <title>EEIC GameAI</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" href="/dist/style.css">
   </head>
-  <body style="width:100%;height:100%;margin:0;">
-    <div id="canvas-container" style="text-align: center;">
-      <canvas id="canvas-2d" width="600" height="1000" style="max-width:100%;max-height:95vh;"></canvas>
+  <body>
+    <div id="canvas-container">
+      <canvas id="canvas-2d" width="600" height="1000"></canvas>
     </div>
-    <img id="player-image" src="/dist/player.gif" style="display: none;">
-    <div id="scoreboard" style="float:left;">←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す。</div>
+    <img id="player-image" src="/dist/player.gif">
+    <div id="scoreboard">←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す。</div>
     <script src="/dist/main.js"></script>
   </body>
 </html>
