--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,19 @@
     </div>
     <img id="player-image" src="/dist/player.gif">
     <div id="scoreboard">←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す。</div>
+    <div id="side-control-wrapper">
+      <div id="side-controls">
+        <button id="button-up" class="button-ud">強く</button>
+        <button id="button-down" class="button-ud">弱く</button>
+      </div>
+    </div>
+    <div id="lower-control-wrapper">
+      <div id="lower-controls">
+        <button id="button-left" class="button-lr">左</button>
+        <button id="button-hit" class="button-hit">Hit</button>
+        <button id="button-right" class="button-lr">右</button>
+      </div>
+    </div>
     <script src="/dist/main.js"></script>
   </body>
 </html>
