残りストーン数表示

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,10 @@
       <canvas id="canvas-2d" width="600" height="1000"></canvas>
     </div>
     <img id="player-image" src="/dist/player.gif">
-    <div id="scoreboard">←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す。</div>
+    <div id="scoreboard">
+      ←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す。
+      <div id="leftstone"></div>
+    </div>
     <div id="side-control-wrapper">
       <div id="side-controls">
         <button id="button-up" class="button-ud">強く</button>
