add result dialog, support replay

--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,16 @@
         <button id="button-right" class="button-lr">右</button>
       </div>
     </div>
+    <div id="dialog-container">
+      <div id="dialog">
+        <h2 id="dialog-title">Win!</h2>
+        <p id="dialog-content">0点であなたの勝利です！</p>
+        <div id="dialog-buttons">
+          <button id="button-return">戻る</button>
+          <button id="button-restart">もう一度</button>
+        </div>
+      </div>
+    </div>
     <script src="/dist/main.js"></script>
   </body>
 </html>
