学習前モデルを選べるように

--- a/static/index.html
+++ b/static/index.html
@@ -26,13 +26,23 @@
         <button id="button-right" class="button-lr">右</button>
       </div>
     </div>
-    <div id="dialog-container">
-      <div id="dialog">
+    <div id="dialog-container" class="dialog-container">
+      <div id="dialog" class="dialog">
         <h2 id="dialog-title">Win!</h2>
         <p id="dialog-content">0点であなたの勝利です！</p>
-        <div id="dialog-buttons">
+        <div id="dialog-buttons" class="dialog-buttons">
           <button id="button-return">戻る</button>
           <button id="button-restart">もう一度</button>
+        </div>
+      </div>
+    </div>
+    <div id="dialog-container2"  class="dialog-container">
+      <div id="dialog2"  class="dialog">
+        <h2 id="dialog-title2">より中央に近い方が勝ち！</h2>
+        <p id="dialog-content2">負けた方のもっとも真ん中に近いストーンより<br>内側にあるストーンの数が得点となります</p>
+        <div id="dialog-buttons2"  class="dialog-buttons">
+          <button id="button-off">学習前AIと対戦</button>
+          <button id="button-on" class="bluebutton">学習済みAIと対戦</button>
         </div>
       </div>
     </div>
