--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
         <p id="dialog-content2">負けた方のもっとも真ん中に近いストーンより<br>内側にあるストーンの数が得点となります</p>
         <div id="dialog-buttons2"  class="dialog-buttons">
           <button id="button-off">学習前AIと対戦</button>
-          <button id="button-on" class="bluebutton">学習済みAIと対戦</button>
+          <button id="button-on">学習済みAIと対戦</button>
         </div>
       </div>
     </div>
