add change camera button

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,9 @@
       ←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す。
       <div id="leftstone"></div>
     </div>
+    <div id="upper-control-wrapper">
+      <button id="button-camera" class="button-ud">視点切替</button>
+    </div>
     <div id="side-control-wrapper">
       <div id="side-controls">
         <button id="button-up" class="button-ud">強く</button>
