--- a/static/index.html
+++ b/static/index.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <div id="canvas-container">
+      <canvas id="scoregraph" width="600" height="100"></canvas>
       <canvas id="canvas-2d" width="600" height="1000"></canvas>
     </div>
     <img id="player-image" src="/dist/player.gif">
     <div id="scoreboard">
-      ←→キーで角度を決めて，<br>↑↓キーで強さを決めて，<br>スペースキーで打ち出す。
+      ←→キーで角度・↑↓キーで強さを決めて，<br>スペースキーで打ち出す。
       <div id="model_message"></div>
       <div id="leftstone"></div>
     </div>
