オーバーレイ

--- a/static/index.html
+++ b/static/index.html
@@ -6,14 +6,18 @@
   </head>
   <body>
     <div id="canvas-container">
-      <canvas id="scoregraph" width="600" height="100"></canvas>
       <canvas id="canvas-2d" width="600" height="1000"></canvas>
+    </div>
+    <div id="graph-container">
+      <button id="button-graph-back" type="button">ゲームに戻る</button>
+      <canvas id="scoregraph"></canvas>
     </div>
     <img id="player-image" src="/dist/player.gif">
     <div id="scoreboard">
       ←→キーで角度・↑↓キーで強さを決めて，<br>スペースキーで打ち出す。
       <div id="model_message"></div>
       <div id="leftstone"></div>
+      <button id="button-graph" type="button">勝率グラフ表示</button>
     </div>
     <div id="side-control-wrapper">
       <div id="side-controls">
