feat: ツイート機能をつけた！

--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,9 @@
       <div id="dialog" class="dialog">
         <h2 id="dialog-title">Win!</h2>
         <p id="dialog-content">0点であなたの勝利です！</p>
+        <p>
+          <a href="https://twitter.com" target="_blank" id="dialog-sharebutton">Twitterでシェア</a>
+        </p>
         <div id="dialog-buttons" class="dialog-buttons">
           <button id="button-return">戻る</button>
           <button id="button-restart">もう一度</button>
