add restart button

--- a/static/index.html
+++ b/static/index.html
@@ -37,6 +37,9 @@
         <button id="button-right" class="button-lr"><i class="fas fa-chevron-right"></i><br>右</button>
       </div>
     </div>
+    <div id="restart-button-container">
+      <button id="button-restart-lb">もう一度</button>
+    </div>
     <div id="dialog-container" class="dialog-container">
       <div id="dialog" class="dialog">
         <h2 id="dialog-title">Win!</h2>
